[project]
name = "sched"
version = "0.1.0"
description = ""
authors = [
    {name = "someusernu",email = "105249610+someusernu@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles (>=24.1.0,<25.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
